Quotient Groups (not completed)

--- a/Linear Algebra.tex
+++ b/Linear Algebra.tex
@@ -36,11 +36,9 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 
 
 \begin{document}
-\searchableSubsection{\chapterTitle{Linear Algebra}}{linear algebra}{\bigskip\bigskip}\TODO{fix these headers}
+\searchableSection{Linear Algebra}{linear algebra}
 
-\searchableSubsection{\sectionTitle{Matrix Algebra}}{linear algebra}{\bigskip}
-
-	\searchableSubsection{Basic properties of Matrix Algebra}{linear algebra}{\bigskip\bigskip
+	\searchableSubsection{Basic properties of Matrix Algebra}{linear algebra}{
 	
 		\begin{definition}
 		Matrix \textbf{equality} is defined component-wise so that if $A = B$ then $A$ and $B$ must have the same dimension as well as equal values in each component.
