--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -136,7 +136,7 @@
 \newcommand{\note}[1]{
 	\begin{tcolorbox}[enhanced jigsaw,colback=note_bg,boxrule=0pt,arc=0pt]
 	\noindent\parbox{\textwidth}{%
-			{\scriptsize \textit{#1}}	
+			{\small \textit{#1}}	
 		}
 	\end{tcolorbox}
 	\smallskip
